--- a/css/style.css
+++ b/css/style.css
@@ -27,14 +27,13 @@ body {
     content: "";
     position: absolute;
     bottom: 0;
-    left: -50px;
-    right: -50px;
+    left: 0px;
+    right: 0px;
     height: 1px;
     background-color: #ccc;
 }
 
 .info-last {
-
     display: flex;
     align-items: center;
 }
@@ -84,4 +83,41 @@ span a:hover {
 .container-element .logo {
     order: -1;
     margin-right: 15px;
+}
+
+/* Ajout des Media Queries */
+@media screen and (max-width: 768px) {
+    /* Règles de style spécifiques pour les écrans d'une largeur maximale de 768px */
+    .container {
+        max-width: 100%;
+        padding: 30px;
+        border-radius: 20px;
+    }
+
+    .label {
+        font-size: 20px;
+    }
+
+    .content {
+        font-size: 18px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    /* Règles de style spécifiques pour les écrans d'une largeur maximale de 480px */
+    body {
+        padding: 20px;
+    }
+
+    .container {
+        padding: 20px;
+    }
+
+    .label {
+        font-size: 18px;
+    }
+
+    .content {
+        font-size: 16px;
+    }
 }
