--- a/css/style.css
+++ b/css/style.css
@@ -114,3 +114,18 @@ span a:hover {
         font-size: 16px;
     }
 }
+
+.profile-picture {
+    text-align: center;
+    margin-top: -50px;
+    margin-bottom: 50px;
+}
+
+.profile-img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 3px solid white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
