--- a/css/style.css
+++ b/css/style.css
@@ -85,36 +85,6 @@ span a:hover {
     margin-right: 15px;
 }
 
-@media screen and (max-width: 768px) {
-    .container {
-        max-width: 100%;
-        padding: 30px;
-        border-radius: 20px;
-    }
-
-    .label {
-        font-size: 20px;
-    }
-
-    .content {
-        font-size: 18px;
-    }
-}
-
-@media screen and (max-width: 480px) {
-    .container {
-        padding: 20px;
-    }
-
-    .label {
-        font-size: 18px;
-    }
-
-    .content {
-        font-size: 16px;
-    }
-}
-
 .profile-picture {
     text-align: center;
     margin-top: -50px;
@@ -128,4 +98,31 @@ span a:hover {
     object-fit: cover;
     border: 3px solid white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Media Queries */
+
+@media (max-width: 768px) {
+    .container {
+        padding: 30px;
+    }
+
+    .label {
+        font-size: 20px;
+    }
+
+    .content {
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 480px) {
+    .container {
+        border-radius: 10px;
+    }
+
+    .profile-img {
+        width: 150px;
+        height: 150px;
+    }
 }
