--- a/css/style.css
+++ b/css/style.css
@@ -119,10 +119,21 @@ span a:hover {
 @media (max-width: 480px) {
     .container {
         border-radius: 10px;
+        max-width: 100%;
+        margin: 0;
     }
 
     .profile-img {
-        width: 150px;
-        height: 150px;
+        width: 250px;
+        height: 250px;
+    }
+
+    .label {
+        font-size: 24px;
+    }
+
+    .content {
+        font-size: 22px;
     }
 }
+
