--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,13 @@ span a:hover {
 }
 
 @media (max-width: 480px) {
+    body {
+        font-family: Inter, sans-serif;
+        margin: 0;
+        margin-top: 100px;
+        background-color: #10243f;
+    }
+    
     .container {
         border-radius: 10px;
         max-width: 100%;
