--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ span a:hover {
         margin-top: 100px;
         background-color: #10243f;
     }
-    
+
     .container {
         border-radius: 10px;
         max-width: 100%;
@@ -144,3 +144,15 @@ span a:hover {
     }
 }
 
+@media (max-width: 428px) {
+    .container {
+        border-radius: 0;
+        max-width: 100%;
+        width: 100%;
+    }
+
+    .profile-img {
+        width: 250px;
+        height: 250px;
+    }
+}
