--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Inter, sans-serif;
-    margin: 0;
+    margin: 5px;
     margin-top: 100px;
     background-color: #10243f;
 }
